--- a/index.html
+++ b/index.html
@@ -80,21 +80,23 @@
 
                         <div class="col-md-5 border-start ps-3 ps-md-5 d-flex flex-column justify-content-center ">
                             <div class="container-fluid ps-0">
-                                <div class="row my-3 text-current">
+                                <div class="row my-4 text-current">
                                     <h2 class="fw-600 mb-3 font22 text-purple">Adres</h2>
                                     <span class="font16">Bakı, Azərbaycan</span>
                                 </div>
-                                <div class="row my-3 text-current">
+                                <div class="row my-4 text-current">
                                     <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
-                                    <span class="font16">zeeynalabdin@gmail.com</span>
+                                    <a href="mailto:zeeynalabdin@gmail.com"
+                                        class="font16 text-current mb-2">zeeynalabdin@gmail.com</a>
+                                        <span class="font16 text-current">+994 99 342 02 12</span>
                                 </div>
-                                <div class="row my-3 text-current">
+                                <div class="row my-4 text-current">
                                     <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
                                     <span class="font16 mb-2"><a href="https://www.facebook.com/zeynal.qedirov.1/"
-                                            class="text-decoration-none text-current" target="_blank"><i
+                                            class="text-current" target="_blank"><i
                                                 class="fa-brands fa-facebook font20"></i>Facebook</a></span>
                                     <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeyoni/"
-                                            class="text-decoration-none text-current" target="_blank"><i
+                                            class="text-current" target="_blank"><i
                                                 class="fa-brands fa-linkedin font20"></i>Linkedin</a></span>
                                 </div>
                             </div>
@@ -109,7 +111,7 @@
         <section id="home">
             <div class="slide-titles d-flex flex-column">
                 <span class="head-title font60 fw-700">Front End Developer</span>
-                <span class="description-title mt-2 current-text fw-600 ls-1">
+                <span class="description-title mt-2 text-current-50 font14 fw-600 ls-1">
                     Sometimes, we need to check the time, wondering when our work or meeting will finish, without
                     getting caught by others.
                 </span>
@@ -393,27 +395,27 @@
                         <h2 class="text-current fw-600 text-uppercase ls-1 font16 mb-3 pt-1">Naviqasiya</h2>
                         <ul class="p-0 d-inline-flex flex-column list-unstyled">
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
-                                <a href="#home" class="text-current text-decoration-none">
+                                <a href="#home" class="text-current ">
                                     Ana Səhifə
                                 </a>
                             </li>
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
-                                <a href="#about" class="text-current text-decoration-none">
+                                <a href="#about" class="text-current ">
                                     Haqqımda
                                 </a>
                             </li>
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
-                                <a href="#portfolio" class="text-current text-decoration-none">
+                                <a href="#portfolio" class="text-current ">
                                     Portfolio
                                 </a>
                             </li>
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
-                                <a href="#blog" class="text-current text-decoration-none">
+                                <a href="#blog" class="text-current ">
                                     Blog
                                 </a>
                             </li>
                             <li class="text-current font10 my-1 ls-4 text-uppercase text-current-50">
-                                <a href="./contact.html" target="_blank" class="text-current text-decoration-none">
+                                <a href="./contact.html" target="_blank" class="text-current ">
                                     Əlaqə
                                 </a>
                             </li>
@@ -426,7 +428,7 @@
                                 <span class="text-current">
                                     E:
                                 </span>
-                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current text-decoration-none">
+                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current ">
                                     zeeynalabdin@gmail.com
                                 </a>
                             </li>
@@ -435,7 +437,7 @@
                                 <span class="text-current">
                                     T:
                                 </span>
-                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current text-decoration-none">
+                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current ">
                                     +994 99 342 02 12
                                 </a>
                             </li>
