--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,7 +26,7 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div>
+    </div> -->
     <!-- page preloader -->
     <div class="theme">
         <i class="fa-solid fa-sun font18"></i>
@@ -88,7 +88,7 @@
                                     <h2 class="fw-600 mb-3 font22 text-purple">Əlaqə</h2>
                                     <a href="mailto:zeeynalabdin@gmail.com"
                                         class="font16 text-current mb-2">zeeynalabdin@gmail.com</a>
-                                        <span class="font16 text-current">+994 99 342 02 12</span>
+                                    <span class="font16 text-current">+994 99 342 02 12</span>
                                 </div>
                                 <div class="row my-4 text-current">
                                     <h2 class="fw-600 mb-3 font22 text-purple">Sosyal Medyalar</h2>
@@ -110,13 +110,12 @@
     <div class="main-wrapper">
         <section id="home">
             <div class="slide-titles d-flex flex-column">
-                <span class="head-title font60 fw-700">Front End Developer</span>
-                <span class="description-title mt-2 text-current-50 font14 fw-600 ls-1">
-                    Sometimes, we need to check the time, wondering when our work or meeting will finish, without
-                    getting caught by others.
+                <span class="head-title font60 fw-700">Front-End Developer</span>
+                <span class="description-title mt-2 text-current-50 font16 fw-600 ls-1">
+                   - Pixel to pixel prinsipi ilə kodladığım işlərimin keyfiyyətinin sizi məmnun edəcəyinə əminəm.
                 </span>
 
-                <a class="mt-5" href="#"><i class="ti-angle-right me-3"></i> View Case</a>
+                <a class="mt-5" href="./assets/Zeynalabdin_Qedirov.pdf" target="_blank"><i class="ti-angle-right me-3"></i>CV'ni Yüklə</a>
 
             </div>
             <div class="swiper mySwiper2">
@@ -167,11 +166,17 @@
             <div class="container-fluid">
                 <div class="row py-5">
                     <div class="col-md-5 d-flex flex-column justify-content-center">
-                        <h2 class="mb-4 fw-700 font30 text-current">Hi, i'm Zeynalabdin!</h2>
+                        <h2 class="mb-4 fw-700 font30 text-current">Haqqımda</h2>
                         <p class="fw-600 font16 text-current-50 lh-1">
-                            Founded in 2000, Dsn Grid has become one of the best Digital Agency in Themeforest.
-                            Blue money going forward, but deploy to production. First-order optimal strategies
-                            build on a culture of contribution and inclusion so those options
+                            Hal-hazırda Bakı Dövlət Universitetində təhsil alıram. Astronomik məqalələr oxumağı, film
+                            izləməyi və texnoloji yenilikləri yaxından izləməyi sevirəm.
+                            2 ildən çoxdur ki, front-end üzrə self-study öyrənirəm. 1 ildən artıq freelance təcrübəm
+                            var.
+                        </p>
+                        <p class="fw-600 font16 text-current-50 lh-1 mt-2">
+                            HTML, CSS, Bootstrap, SASS, JavaScript, Jquery, ReactJs, Redux-Toolkit, NextJs biliklərinə
+                            sahibəm. Əlavə olaraq da C, C++, Python proqramlaşdırma dillərinin təməl biliklərinə
+                            yiyələnmişəm.
                         </p>
                         <h5 class="fw-700 text-uppercase text-current font18 mt-4">Qədirov Zeynalabdin</h5>
                         <span class="text-current-50 font16">Front-End Developer</span>
@@ -202,29 +207,69 @@
                         <h2 class="mb-4 fw-700 font40 text-current">Portfolio</h2>
                         <div class="swiper portfolio pb-5">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide position-relative">
-                                    <img src="./assets/img/slide1.jpg" alt="">
-                                    <span class="position-absolute text-current text-uppercase fw-700">Biker
-                                        Store</span>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://zeyoni.github.io/BikerStore/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/biker.png" alt="">
+                                        <span class="position-absolute text-current text-uppercase fw-700">Biker
+                                            Store</span>
+                                    </a>
                                 </div>
-                                <div class="swiper-slide position-relative">
-                                    <img src="./assets/img/slide2.jpg" alt="">
-                                    <span
-                                        class="position-absolute text-current text-uppercase fw-700">Ticarətmərkəzi</span>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://ticaretmerkezi.az/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/ticaretmerkezi.png" alt="">
+                                        <span
+                                            class="position-absolute text-current text-uppercase fw-700">Ticarətmərkəzi</span>
+                                    </a>
                                 </div>
-                                <div class="swiper-slide position-relative">
-                                    <img src="./assets/img/slide5.jpg" alt="">
-                                    <span class="position-absolute text-current text-uppercase fw-700">Rauf
-                                        Sadiqov</span>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://raufsadiqov.az/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/raufsadiqov.png" alt="">
+                                        <span class="position-absolute text-current text-uppercase fw-700">Rauf
+                                            Sadiqov</span>
+                                    </a>
                                 </div>
-                                <div class="swiper-slide position-relative">
-                                    <img src="./assets/img/slide3.jpg" alt="">
-                                    <span class="position-absolute text-current text-uppercase fw-700">Direkt
-                                        Kurse</span>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="http://kokhuceyre.az/az" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/kokhuceyre.png" alt="">
+                                        <span
+                                            class="position-absolute text-current text-uppercase fw-700">Kök Hüceyrə</span>
+                                    </a>
                                 </div>
-                                <div class="swiper-slide position-relative">
-                                    <img src="./assets/img/about.jpg" alt="">
-                                    <span class="position-absolute text-current text-uppercase fw-700">Lumusoft</span>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://lumusoft.com/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/lumusoft.png" alt="">
+                                        <span
+                                            class="position-absolute text-current text-uppercase fw-700">Lumusoft</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://react-marketplace0.netlify.app/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center flex-column align-items-center">
+                                        <img src="./assets/img/galaxy.png" alt="">
+                                        <span
+                                            class="position-absolute text-current text-uppercase fw-700">Galaxy Express - React</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://admindashboard00.netlify.app/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center flex-column align-items-center">
+                                        <h2 class="font26 fw-600 text-white">Admin Dashboard</h2>
+                                        <span
+                                            class="position-absolute text-current text-uppercase fw-700">Dashboard - React</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://todo-list-react00.netlify.app/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <h2 class="font26 text-white">TODOLIST</h2>
+                                        <span
+                                            class="position-absolute text-current text-uppercase fw-700">Todolist - React</span>
+                                    </a>
                                 </div>
 
                             </div>
@@ -240,7 +285,7 @@
             <div class="container-fluid">
                 <div class="row py-3 bg-current-low">
                     <div class="col-md-5">
-                        <h2 class="mb-4 fw-700 font35 text-current">Müştərilərimizin geri dönüşləri</h2>
+                        <h2 class="mb-4 fw-700 font35 text-current">Müştərilərimin geri dönüşləri</h2>
                     </div>
                     <div class="col-md-7">
                         <div class="swiper feedback">
@@ -253,7 +298,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/lumusoft.png" class="me-3" alt="">
-                                        <span class="fw-500">Lumusoft, WEB AGENCY</span>
+                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
                                     </div>
                                 </div>
 
@@ -264,7 +309,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/neyman.jpg" class="me-3" alt="">
-                                        <span class="fw-500">Neyman Technology</span>
+                                        <span class="text-current fw-500">Neyman Technology</span>
                                     </div>
                                 </div>
 
@@ -276,7 +321,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/lumusoft.png" class="me-3" alt="">
-                                        <span class="fw-500">Lumusoft, WEB AGENCY</span>
+                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
                                     </div>
                                 </div>
 
@@ -287,7 +332,7 @@
                                     </span>
                                     <div class="feedback-author d-flex flex-row align-items-center">
                                         <img src="./assets/img/lumusoft.png" class="me-3" alt="">
-                                        <span class="fw-500">Lumusoft, WEB AGENCY</span>
+                                        <span class="text-current fw-500">Lumusoft, WEB AGENCY</span>
                                     </div>
                                 </div>
 
@@ -437,9 +482,9 @@
                                 <span class="text-current">
                                     T:
                                 </span>
-                                <a href="mailto:zeeynalabdin@gmail.com" class="text-current ">
+                                <span class="text-current ">
                                     +994 99 342 02 12
-                                </a>
+                                </span>
                             </li>
                         </ul>
                     </div>
@@ -456,7 +501,7 @@
                 </div>
                 <hr>
                 <div class="row py-1">
-                    <p class="font10 text-center w-100 fw-600 text-current-low text-uppercase">zeynalabdeen</p>
+                    <p class="font10 text-center w-100 fw-600 text-current text-uppercase">zeynalabdeen</p>
                 </div>
             </div>
         </footer>
