--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- page preloader -->
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div class="top bg-current">
             <span class="preloader-title text-current">Zeynalabdeen</span>
         </div>
@@ -26,7 +26,7 @@
         <div class="bottom bg-current">
             <span class="preloader-title text-current">Yüklənir...</span>
         </div>
-    </div> -->
+    </div>
     <!-- page preloader -->
     <div class="theme">
         <i class="fa-solid fa-sun font18"></i>
@@ -112,10 +112,11 @@
             <div class="slide-titles d-flex flex-column">
                 <span class="head-title font60 fw-700">Front-End Developer</span>
                 <span class="description-title mt-2 text-current-50 font16 fw-600 ls-1">
-                   - Pixel to pixel prinsipi ilə kodladığım işlərimin keyfiyyətinin sizi məmnun edəcəyinə əminəm.
+                    - Pixel to pixel prinsipi ilə kodladığım işlərimin keyfiyyətinin sizi məmnun edəcəyinə əminəm.
                 </span>
 
-                <a class="mt-5" href="./assets/Zeynalabdin_Qedirov.pdf" target="_blank"><i class="ti-angle-right me-3"></i>CV'ni Yüklə</a>
+                <a class="mt-5" href="./assets/Zeynalabdin_Qedirov.pdf" target="_blank"><i
+                        class="ti-angle-right me-3"></i>CV'ni Yüklə</a>
 
             </div>
             <div class="swiper mySwiper2">
@@ -235,8 +236,8 @@
                                     <a href="http://kokhuceyre.az/az" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center align-items-center">
                                         <img src="./assets/img/kokhuceyre.png" alt="">
-                                        <span
-                                            class="position-absolute text-current text-uppercase fw-700">Kök Hüceyrə</span>
+                                        <span class="position-absolute text-current text-uppercase fw-700">Kök
+                                            Hüceyrə</span>
                                     </a>
                                 </div>
                                 <div class="swiper-slide position-relative portfolio-back">
@@ -251,24 +252,24 @@
                                     <a href="https://react-marketplace0.netlify.app/" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center flex-column align-items-center">
                                         <img src="./assets/img/galaxy.png" alt="">
-                                        <span
-                                            class="position-absolute text-current text-uppercase fw-700">Galaxy Express - React</span>
+                                        <span class="position-absolute text-current text-uppercase fw-700">Galaxy
+                                            Express - React</span>
                                     </a>
                                 </div>
                                 <div class="swiper-slide position-relative portfolio-back">
                                     <a href="https://admindashboard00.netlify.app/" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center flex-column align-items-center">
                                         <h2 class="font26 fw-600 text-white">Admin Dashboard</h2>
-                                        <span
-                                            class="position-absolute text-current text-uppercase fw-700">Dashboard - React</span>
+                                        <span class="position-absolute text-current text-uppercase fw-700">Dashboard -
+                                            React</span>
                                     </a>
                                 </div>
                                 <div class="swiper-slide position-relative portfolio-back">
                                     <a href="https://todo-list-react00.netlify.app/" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center align-items-center">
                                         <h2 class="font26 text-white">TODOLIST</h2>
-                                        <span
-                                            class="position-absolute text-current text-uppercase fw-700">Todolist - React</span>
+                                        <span class="position-absolute text-current text-uppercase fw-700">Todolist -
+                                            React</span>
                                     </a>
                                 </div>
 
