--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="menu-content bg-current px-3 px-md-5">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-7">
-                            <ul class="p-0 d-inline-flex">
+                        <div class="col-md-7 d-flex flex-column justify-content-center ">
+                            <ul class="p-0 d-inline-flex ">
                                 <li class="text-current font28 my-1">
                                     <a>
                                         <span class="font14 d-none d-md-inline-flex">01.</span>Ana Səhifə
@@ -78,7 +78,7 @@
                             </ul>
                         </div>
 
-                        <div class="col-md-5 border-start ps-3 ps-md-5 d-flex flex-column justify-content-center ">
+                        <div class="col-md-5 border-start ps-3 ps-md-5 d-flex flex-column justify-content-center">
                             <div class="container-fluid ps-0">
                                 <div class="row my-4 text-current">
                                     <h2 class="fw-600 mb-3 font22 text-purple">Adres</h2>
