--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
                         <div class="col-md-7 d-flex flex-column justify-content-center ">
                             <ul class="p-0 d-inline-flex ">
                                 <li class="text-current font28 my-1">
-                                    <a>
+                                    <a href="#home">
                                         <span class="font14 d-none d-md-inline-flex">01.</span>Ana Səhifə
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a>
+                                    <a href="#about">
                                         <span class="font14 d-none d-md-inline-flex">02.</span>Haqqımda
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a>
+                                    <a href="#portfolio">
                                         <span class="font14 d-none d-md-inline-flex">03.</span>Portfolio
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a>
+                                    <a href="#blog">
                                         <span class="font14 d-none d-md-inline-flex">04.</span>Blog
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a>
+                                    <a href="#footer">
                                         <span class="font14 d-none d-md-inline-flex">05.</span>Əlaqə
                                     </a>
                                 </li>
@@ -421,7 +421,7 @@
         </section>
 
 
-        <footer class="bg-current-low px-2 px-md-5 pt-5">
+        <footer class="bg-current-low px-2 px-md-5 pt-5" id="footer">
             <div class="container-fluid pt-4">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-3 mb-3">
