--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
                         <div class="col-md-7 d-flex flex-column justify-content-center ">
                             <ul class="p-0 d-inline-flex ">
                                 <li class="text-current font28 my-1">
-                                    <a href="#home">
+                                    <a href="#home" class="text-current">
                                         <span class="font14 d-none d-md-inline-flex">01.</span>Ana Səhifə
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a href="#about">
+                                    <a href="#about" class="text-current">
                                         <span class="font14 d-none d-md-inline-flex">02.</span>Haqqımda
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a href="#portfolio">
+                                    <a href="#portfolio" class="text-current">
                                         <span class="font14 d-none d-md-inline-flex">03.</span>Portfolio
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a href="#blog">
+                                    <a href="#blog" class="text-current">
                                         <span class="font14 d-none d-md-inline-flex">04.</span>Blog
                                     </a>
                                 </li>
                                 <li class="text-current font28 my-1">
-                                    <a href="#footer">
+                                    <a href="#footer" class="text-current">
                                         <span class="font14 d-none d-md-inline-flex">05.</span>Əlaqə
                                     </a>
                                 </li>
