--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                     <span class="font16 mb-2"><a href="https://www.facebook.com/zeynal.qedirov.1/"
                                             class="text-current" target="_blank"><i
                                                 class="fa-brands fa-facebook font20"></i>Facebook</a></span>
-                                    <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeyoni/"
+                                    <span class="font16 mb-2"><a href="https://www.linkedin.com/in/zeynalabdeen/"
                                             class="text-current" target="_blank"><i
                                                 class="fa-brands fa-linkedin font20"></i>Linkedin</a></span>
                                 </div>
@@ -432,7 +432,7 @@
                                     class="fa-brands fa-facebook-f text-current p-1"></i></a>
                             <a href="https://github.com/Zeyoni" target="_blank" class="border rounded-circle font12"><i
                                     class="fa-brands fa-github text-current p-1"></i></a>
-                            <a href="https://www.linkedin.com/in/zeyoni/" target="_blank"
+                            <a href="https://www.linkedin.com/in/zeynalabdeen/" target="_blank"
                                 class="border rounded-circle font12"><i
                                     class="fa-brands fa-linkedin-in text-current  p-1"></i></a>
                         </span>
