--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="swiper portfolio pb-5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide position-relative portfolio-back">
-                                    <a href="https://zeyoni.github.io/BikerStore/" target="_blank"
+                                    <a href="https://zeynalabdeen.github.io/BikerStore/" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center align-items-center">
                                         <img src="./assets/img/biker.png" alt="">
                                         <span class="position-absolute text-current text-uppercase fw-700">Biker
@@ -430,7 +430,7 @@
                             <a href="https://www.facebook.com/zeynal.qedirov.1/" target="_blank"
                                 class="border rounded-circle font12"><i
                                     class="fa-brands fa-facebook-f text-current p-1"></i></a>
-                            <a href="https://github.com/Zeyoni" target="_blank" class="border rounded-circle font12"><i
+                            <a href="https://github.com/zeynalabdeen" target="_blank" class="border rounded-circle font12"><i
                                     class="fa-brands fa-github text-current p-1"></i></a>
                             <a href="https://www.linkedin.com/in/zeynalabdin/" target="_blank"
                                 class="border rounded-circle font12"><i
