--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body class="active">
     <!-- page preloader -->
     <div class="preloader">
         <div class="top bg-current">
-            <span class="preloader-title text-current">Zeynalabdeen</span>
+            <span class="preloader-title text-current">Zeynalabdinjs</span>
         </div>
         <span class="loader-line"></span>
         <div class="bottom bg-current">
@@ -171,11 +171,10 @@
                         <p class="fw-600 font16 text-current-50 lh-1">
                             Hal-hazırda Bakı Dövlət Universitetində təhsil alıram. Astronomik məqalələr oxumağı, film
                             izləməyi və texnoloji yenilikləri yaxından izləməyi sevirəm.
-                            2 ildən çoxdur ki, front-end üzrə self-study öyrənirəm. 1 ildən artıq freelance təcrübəm
-                            var.
+                            Front-End sahəsində 2 ildən çox təcrübəm var.
                         </p>
                         <p class="fw-600 font16 text-current-50 lh-1 mt-2">
-                            HTML, CSS, Bootstrap, SASS, JavaScript, Jquery, ReactJs, Redux-Toolkit, NextJs biliklərinə
+                            HTML, CSS, Bootstrap, SASS, JavaScript, Jquery, ReactJs, Redux, Redux toolkit, NextJs biliklərinə
                             sahibəm. Əlavə olaraq da C, C++, Python proqramlaşdırma dillərinin təməl biliklərinə
                             yiyələnmişəm.
                         </p>
@@ -208,6 +207,20 @@
                         <h2 class="mb-4 fw-700 font40 text-current">Portfolio</h2>
                         <div class="swiper portfolio pb-5">
                             <div class="swiper-wrapper">
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://expargo.net/" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/groupage.svg" alt="">
+                                        <span class="position-absolute text-current text-uppercase fw-700">Expargo groupage</span>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide position-relative portfolio-back">
+                                    <a href="https://rosbery.com" target="_blank"
+                                        class="w-100 h-100 d-flex justify-content-center align-items-center">
+                                        <img src="./assets/img/rosbery.png" alt="">
+                                        <span class="position-absolute text-current text-uppercase fw-700">Rosbery</span>
+                                    </a>
+                                </div>
                                 <div class="swiper-slide position-relative portfolio-back">
                                     <a href="https://bikerstore.az" target="_blank"
                                         class="w-100 h-100 d-flex justify-content-center align-items-center">
@@ -282,7 +295,7 @@
         </section>
 
 
-        <section id="feedback" class="py-4 px-2 px-md-5 bg-current">
+        <!-- <section id="feedback" class="py-4 px-2 px-md-5 bg-current">
             <div class="container-fluid">
                 <div class="row py-3 bg-current-low">
                     <div class="col-md-5">
@@ -344,7 +357,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
         <section id="blog" class="py-4 px-2 px-md-5 bg-current">
@@ -425,12 +438,12 @@
             <div class="container-fluid pt-4">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-3 mb-3">
-                        <h2 class="text-current fw-800 ls-1 font24 mb-4">Zeynalabdeen</h2>
+                        <h2 class="text-current fw-800 ls-1 font24 mb-4">Zeynalabdinjs</h2>
                         <span class="social d-flex flex-row justify-content-between">
-                            <a href="https://www.facebook.com/zeynal.qedirov.1/" target="_blank"
+                            <a href="https://www.facebook.com/zeynalabdinjs/" target="_blank"
                                 class="border rounded-circle font12"><i
                                     class="fa-brands fa-facebook-f text-current p-1"></i></a>
-                            <a href="https://github.com/zeynalabdeen" target="_blank" class="border rounded-circle font12"><i
+                            <a href="https://github.com/zeynalabdinjs" target="_blank" class="border rounded-circle font12"><i
                                     class="fa-brands fa-github text-current p-1"></i></a>
                             <a href="https://www.linkedin.com/in/zeynalabdin/" target="_blank"
                                 class="border rounded-circle font12"><i
@@ -502,7 +515,7 @@
                 </div>
                 <hr>
                 <div class="row py-1">
-                    <p class="font10 text-center w-100 fw-600 text-current text-uppercase">zeynalabdeen</p>
+                    <p class="font10 text-center w-100 fw-600 text-current text-uppercase">zeynalabdinjs</p>
                 </div>
             </div>
         </footer>
